Minor fixes and formatting